Fix main content overflow scroll problem

--- a/iab/src/App.css
+++ b/iab/src/App.css
@@ -3,7 +3,7 @@ html, body, #root{
     height : 100%;
     overflow : hidden;
 }
-section {
+main, section {
     overflow: auto;
 }
 body {
